[tool.poetry]
name = "test-pyvistaqt"
version = "0.1.0"
description = ""
authors = ["rgerum <14153051+rgerum@users.noreply.github.com>"]
packages = [{include = "test_pyvistaqt"}]

[tool.poetry.dependencies]
python = "^3.9"
pyvistaqt = "^0.9.1"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
